--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,6 +2,8 @@ body {
   background-color: #0d1a2d;
   font-size: 18px;
   font-family: "Outfit", sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 a {
@@ -103,6 +105,19 @@ a:hover {
   bottom: 0px;
   left: 50%;
   transform: translateX(-50%);
-  padding: 24px;
+  padding: 24px 0;
   color: #7992b1;
+  text-align: center;
+  width: 100%;
+}
+
+@media (max-width: 575.98px) {
+  .card {
+    width: 90%;
+    box-sizing: border-box;
+  }
+
+  .attribution {
+    font-size: 12px;
+  }
 }
